<resources>
    <string name="app_name">RSCliente</string>
    <string name="action_settings">Settings</string>
    <string name="action_cambiar_clave">Cambiar contraseña</string>
    <string name="action_cerrar_sesion">Cerrar Sesion</string>
    <string name="action_acerca_de">Acerca de</string>

    <!--Menu-->
    <string name="cambiar_contrase_na">Cambiar contraseña</string>

    <string name="txt_inicio">Rastreador Satelital</string>
    <string name="button_login">Iniciar</string>
    <string name="button_signup">Cancelar</string>
    <string name="button_confirm_login">Confirmar</string>
    <string name="button_cancel_login">Cancelar</string>
    <string name="button_confirm_signup">Confirm Sign Up</string>
    <string name="button_cancel_signup">Cancel Sign Up</string>
    <string name="edit_username">Correo</string>
    <string name="edit_password">Clave</string>
    <string name="btn_recuperar">Recuperar clave</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="title_activity_etalle_gps">DetalleGps</string>

    <string name="posicion">Posicion</string>

    <string name="lblImei">Imei</string>
    <string name="lblNumero">Numero</string>
    <string name="lblDescripcion">Descripcion</string>

    <!--Dialogo cambiar clave-->
    <string name="info_cambiar_clave">Para cambiar su clave introdusca la anterior y la nueva clave
        asi como su confirmacion, recuerde que la clave por defecto es 123 </string>
    <string name="clave_anterior">Clave actual</string>
    <string name="clave_nueva">Clave nueva</string>
    <string name="confimaicon_clave">Confirme la nueva clave</string>
    <string name="olvidaste_clave">Olvide mi contraseña</string>
    <string name="cambiar">Cambiar clave</string>

</resources>
