<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	android:layout_marginBottom="5dp"
	  android:orientation="vertical">

	<ImageView
		android:id="@+id/img"
		android:layout_width="45dp"
		android:layout_height="45dp"
		android:src="@drawable/icono_gps"/>

	<TextView android:id="@+id/txtLabelImei"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/img"
		android:layout_toRightOf="@+id/img"
		android:layout_marginStart="5dp"
		android:text="@string/lblImei"
		android:textColor="@color/colorPrimary"
		android:textSize="15sp" />
	<TextView android:id="@+id/txtImei"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/txtLabelImei"
		android:layout_toRightOf="@+id/txtLabelImei"
		android:layout_marginStart="35dp"
		android:ems="19"
		android:textSize="15sp" />

	<TextView android:id="@+id/txtLabelNumero"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/txtLabelImei"
		android:layout_alignStart="@+id/txtLabelImei"
		android:text="@string/lblNumero"
		android:textSize="15sp" />
	<TextView android:id="@+id/txtNumero"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/txtLabelNumero"
		android:layout_alignStart="@+id/txtImei"
		android:ems="19"
		android:textStyle="normal" 
		android:textSize="15sp"
		 />


	<TextView android:id="@+id/txtLabelDescripcion"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/txtLabelNumero"
		android:layout_marginTop="5dp"
		android:text="@string/lblDescripcion"
		android:textSize="15sp" />
	<TextView android:id="@+id/txtDescripcion"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/txtLabelDescripcion"
		android:layout_alignStart="@+id/txtImei"
		android:textStyle="normal"
		android:ems="19"
		android:textSize="12sp"
		android:layout_toRightOf="@+id/txtLabelDescripcion"
		/>
	
</RelativeLayout>
