<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aldo.aget.rscliente.MainActivity"
    android:background="@color/colorNegro"
    tools:showIn="@layout/activity_main">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->

    <com.aldo.aget.rscliente.MyVideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.aldo.aget.rscliente.FormView
        android:id="@+id/formView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="124dp"
        android:alpha="0"/>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/button_login"
            android:textColor="@color/button_text" />

        <Button
            android:id="@+id/buttonRight"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:background="@drawable/button"
            android:text="@string/button_signup"
            android:textColor="@color/button_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_inicio"
        android:textSize="40dp"
        android:layout_centerInParent="true"
        android:textColor="@android:color/white"/>



</RelativeLayout>
