<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<EditText-->
        <!--android:id="@+id/edit1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@android:color/transparent"-->
        <!--android:hint="@string/edit_username"-->
        <!--android:singleLine="true"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textColorHint="#55FFFFFF" />-->


    <android.support.design.widget.TextInputLayout
        android:id="@+id/mcr_edt_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/Hint"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/edt_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="19"
            android:background="@android:color/transparent"
            android:hint="@string/edit_username"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:singleLine="true"
            android:textColorHint="#55FFFFFF"
            android:layout_centerHorizontal="true" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white" />

    <!--<EditText-->
        <!--android:id="@+id/edit2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="136dp"-->
        <!--android:background="@android:color/transparent"-->
        <!--android:hint="@string/edit_password"-->
        <!--android:inputType="textPassword"-->
        <!--android:singleLine="true"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textColorHint="#55FFFFFF" />-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mcr_edt_clave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/Hint"
        android:layout_marginTop="35dp">
        <EditText
            android:id="@+id/edt_clave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="19"
            android:background="@android:color/transparent"

            android:hint="@string/edit_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:singleLine="true"
            android:textColorHint="#55FFFFFF"
            android:layout_centerHorizontal="true" />
    </android.support.design.widget.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/viewClave"
        android:layout_marginTop="5dp"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/btn_recuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/btn_recuperar"
        />
</merge>